fixed waiting for users in open model, to leave the system